second working design

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hub de Ciencias Sociales Modernas</title>
+    <title>Laura Reina Lao - Antropóloga en Formación</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
         
@@ -15,7 +15,7 @@
 
         body {
             font-family: 'Poppins', sans-serif;
-            background-color: #f5f7fa;
+            background-color: #f0f4f8;
             color: #333;
             line-height: 1.6;
         }
@@ -27,7 +27,7 @@
         }
 
         header {
-            background-color: #6c5ce7;
+            background-color: #5e548e;
             color: white;
             text-align: center;
             padding: 2rem 0;
@@ -74,29 +74,18 @@
         }
 
         .quote {
-            background-color: #74b9ff;
-            color: #2c3e50;
+            background-color: #9f86c0;
+            color: white;
             padding: 2rem;
             margin: 2rem 0;
             border-radius: 10px;
             position: relative;
         }
 
-        .quote img {
-            width: 100px;
-            height: 100px;
-            border-radius: 50%;
-            object-fit: cover;
-            position: absolute;
-            top: -50px;
-            left: 20px;
-            border: 5px solid white;
-        }
-
         .quote-text {
             font-style: italic;
             font-size: 1.2rem;
-            margin-top: 2rem;
+            margin-top: 1rem;
         }
 
         .quote-author {
@@ -105,31 +94,8 @@
             margin-top: 1rem;
         }
 
-        .gif {
-            width: 100px;
-            height: 100px;
-            background-color: #00b894;
-            border-radius: 50%;
-            position: fixed;
-            animation: bounce 2s infinite;
-        }
-
-        @keyframes bounce {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-20px); }
-        }
-
-        #gif1 { top: 20%; left: 5%; }
-        #gif2 { top: 60%; right: 5%; }
-
-        @media (max-width: 767px) {
-            .gif {
-                display: none;
-            }
-        }
-
         .my-articles {
-            background-color: #a29bfe;
+            background-color: #be95c4;
             padding: 2rem;
             border-radius: 10px;
             margin: 2rem 0;
@@ -155,91 +121,90 @@
         .article-list li:hover {
             transform: translateX(10px);
         }
+
+        .about-me {
+            background-color: #e0b1cb;
+            padding: 2rem;
+            border-radius: 10px;
+            margin: 2rem 0;
+            text-align: center;
+        }
+
+        .about-me img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+            margin-bottom: 1rem;
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1>Hub de Ciencias Sociales Modernas</h1>
-        <p>Explorando Filosofía, Antropología y más allá</p>
+        <h1>Laura Reina Lao</h1>
+        <p>Antropóloga en Formación | Exploradora de Culturas</p>
     </header>
 
     <div class="container">
+        <div class="about-me">
+            <img src="https://thispersondoesnotexist.com/" alt="Laura Reina Lao">
+            <h2>¡Hola! Soy Laura</h2>
+            <p>Estudiante apasionada de antropología, a punto de finalizar mis estudios. Me fascina explorar la diversidad cultural y entender cómo las sociedades dan forma a nuestras experiencias.</p>
+        </div>
+
         <div class="grid">
             <div class="card">
-                <img src="https://picsum.photos/seed/philosophy/400/200" alt="Concepto de filosofía">
+                <img src="https://images.unsplash.com/photo-1532153259564-a5f24f261f51?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Antropología cultural">
                 <div class="card-content">
-                    <h2>La Evolución del Pensamiento Filosófico</h2>
-                    <p>Explora cómo las ideas filosóficas han moldeado nuestra comprensión del mundo desde la antigüedad hasta el presente.</p>
+                    <h2>Antropología Cultural en la Era Digital</h2>
+                    <p>Explorando cómo las comunidades en línea están redefiniendo nuestras nociones de cultura y pertenencia.</p>
                 </div>
             </div>
             <div class="card">
-                <img src="https://picsum.photos/seed/anthropology/400/200" alt="Trabajo de campo antropológico">
+                <img src="https://images.unsplash.com/photo-1531206715517-5c0ba140b2b8?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Etnografía urbana">
                 <div class="card-content">
-                    <h2>Antropología Cultural en la Era Digital</h2>
-                    <p>Descubre cómo los antropólogos están adaptando sus métodos para estudiar comunidades en línea y culturas digitales.</p>
+                    <h2>Etnografía Urbana</h2>
+                    <p>Descubriendo las historias ocultas y las dinámicas sociales en el corazón de nuestras ciudades.</p>
                 </div>
             </div>
         </div>
 
         <div class="quote">
-            <img src="https://picsum.photos/seed/ortega/100/100" alt="Ortega y Gasset">
-            <div class="quote-text">"Yo soy yo y mi circunstancia, y si no la salvo a ella no me salvo yo."</div>
-            <div class="quote-author">- José Ortega y Gasset</div>
+            <div class="quote-text">"La antropología es la ciencia que nos da la visión más amplia del ser humano."</div>
+            <div class="quote-author">- Claude Lévi-Strauss</div>
         </div>
 
         <div class="my-articles">
-            <h2>Mis Artículos</h2>
+            <h2>Mis Proyectos de Investigación</h2>
             <ul class="article-list">
-                <li>La influencia de la tecnología en las relaciones sociales contemporáneas</li>
-                <li>Análisis comparativo de las teorías antropológicas del siglo XX</li>
-                <li>El papel de la filosofía en la era de la inteligencia artificial</li>
-                <li>Etnografía urbana: Nuevas metodologías para el estudio de las ciudades modernas</li>
+                <li>El impacto de las redes sociales en las relaciones interpersonales de la Generación Z</li>
+                <li>Rituales modernos: Una exploración de las nuevas formas de espiritualidad en contextos urbanos</li>
+                <li>La evolución de la identidad cultural en comunidades de inmigrantes de segunda generación</li>
+                <li>Antropología del consumo: Patrones de compra como reflejo de valores culturales</li>
             </ul>
         </div>
 
         <div class="grid">
             <div class="card">
-                <img src="https://picsum.photos/seed/sports/400/200" alt="Antropología del deporte">
+                <img src="https://images.unsplash.com/photo-1541339907198-e08756dedf3f?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Antropología del deporte">
                 <div class="card-content">
-                    <h2>La Antropología del Deporte</h2>
-                    <p>Descubre el significado cultural del deporte y cómo refleja los valores sociales en diferentes culturas.</p>
+                    <h2>Antropología del Deporte</h2>
+                    <p>Analizando cómo las prácticas deportivas reflejan y moldean los valores sociales en diferentes culturas.</p>
                 </div>
             </div>
             <div class="card">
-                <img src="https://picsum.photos/seed/ethnology/400/200" alt="Investigación etnológica">
+                <img src="https://images.unsplash.com/photo-1532619675605-1ede6c2ed2b0?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Diversidad cultural">
                 <div class="card-content">
-                    <h2>Etnología Comparativa: Entendiendo la Diversidad Humana</h2>
-                    <p>Explora las similitudes y diferencias entre las sociedades humanas a través de la lente de la etnología moderna.</p>
+                    <h2>Diversidad Cultural en la Era Global</h2>
+                    <p>Explorando cómo las culturas locales se adaptan y resisten ante la globalización.</p>
                 </div>
             </div>
         </div>
 
         <div class="quote">
-            <img src="https://picsum.photos/seed/zambrano/100/100" alt="María Zambrano">
-            <div class="quote-text">"La vida no es de nadie, todos somos la vida."</div>
-            <div class="quote-author">- María Zambrano</div>
-        </div>
-
-        <div class="grid">
-            <div class="card">
-                <img src="https://picsum.photos/seed/socialscience/400/200" alt="Investigación en ciencias sociales">
-                <div class="card-content">
-                    <h2>Enfoques Interdisciplinarios en Ciencias Sociales</h2>
-                    <p>Aprende cómo los investigadores están rompiendo las fronteras tradicionales entre disciplinas para abordar problemas sociales complejos.</p>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://picsum.photos/seed/science/400/200" alt="Filosofía de la ciencia">
-                <div class="card-content">
-                    <h2>La Filosofía de la Ciencia: Cuestionando Nuestros Métodos</h2>
-                    <p>Profundiza en los fundamentos filosóficos de la investigación científica y cómo dan forma a nuestra comprensión del conocimiento.</p>
-                </div>
-            </div>
+            <div class="quote-text">"Comprender una cultura diferente a la nuestra requiere algo más que información, requiere empatía."</div>
+            <div class="quote-author">- Margaret Mead</div>
         </div>
     </div>
-
-    <div class="gif" id="gif1"></div>
-    <div class="gif" id="gif2"></div>
-
 </body>
 </html>
